Prevent feed title from wrapping.

--- a/app/stylesheets/_styling.sass
+++ b/app/stylesheets/_styling.sass
@@ -81,6 +81,7 @@
   overflow: hidden
   line-height: 1em
   height: 1em
+  white-space: nowrap
   b.fade
     background = !bgcolor none repeat scroll 0% 0%
     display: block
